--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 title: nagare
 ---
 
-<div id="home">
+<div class="ty-wide">
   <ul class="posts">
     {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><a href="{{ post.url }}">{{ post.title }}</a><small class="pdate">{{ post.date | date: "%m-%-d" }}</small></li>
     {% endfor %}
   </ul>
 </div>
