--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 title: nagare
 ---
-
-<div class="ty-wide">
+<div class="ty ty-wide">
   <ul class="posts">
     {% for post in site.posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a><small class="pdate">{{ post.date | date: "%m-%-d" }}</small></li>
