font & about page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@ layout: default
 title: nagare
 ---
 <div class="ty ty-wide">
-  <ul class="posts">
-    {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a><small class="pdate">{{ post.date | date: "%m-%-d" }}</small></li>
-    {% endfor %}
-  </ul>
+    <nav class="nav"><span class="banner"><a href="/about">yukirock</a></span></nav>
+    <ul class="posts" style="margin-top: 1.5rem;">
+        {% for post in site.posts %}
+        <li><a href="{{ post.url }}">{{ post.title }}</a><small class="pdate">{{ post.date | date: "%m-%-d" }}</small></li>
+        {% endfor %}
+    </ul>
 </div>
