--- a/index.html
+++ b/index.html
@@ -2,11 +2,5 @@
 layout: default
 title: nagare
 ---
-<div class="ty ty-wide">
-    <nav class="nav"><span class="banner"><a href="/about">yukirock</a></span></nav>
-    <ul class="posts" style="margin-top: 1.5rem;">
-        {% for post in site.posts %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a><small class="pdate">{{ post.date | date: "%m-%-d" }}</small></li>
-        {% endfor %}
-    </ul>
-</div>
+<h1>Chad Luo</h1>
+<p>Aka yukirock, is currently pursuing a Bachelor of Computer Science at UNSW Australia. He is interested in web and graphical design, as well as photography. He has experience in Python and Haskell, and is eager to learn anything intended for simplifying things. He speaks Mandarin, English and Japanese, and once played in a band as a bassist.</p>
