--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: default
 title: nagare
 ---
 <h1>Chad Luo</h1>
-<p>Aka yukirock, is currently pursuing a Bachelor of Computer Science at UNSW Australia. He is interested in web and graphical design, as well as photography. He has experience in Python and Haskell, and is eager to learn anything intended for simplifying things. He speaks Mandarin, English and Japanese, and once played in a band as a bassist.</p>
+<p>Aka yukirock, is currently pursuing a Bachelor of Computer Science at UNSW Australia. He is interested in web and graphical design as well as photography. He has experience in Python and Haskell, and is eager to learn anything intended for simplifying things. He speaks Mandarin, English and Japanese, and once played in a band as a bassist.</p>
