--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             I speak Mandarin, English and Japanese.
             I once played in a band as a bassist.</p>
         </div>
-        <footer class="font-rosarivo"><address class="nav"><span class="banner">i at yukir.net</span></address></footer>
+        <footer class="font-rosarivo"><address class="nav"><span class="banner">i at yuki.rocks</span></address></footer>
         <script>
             var fonts = [
             "font-futura",
