--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
       margin: 0;
       font-size: 100%;
       font-family: "Mate", serif;
-      background-color: #222;
+      background-color: #171717 ;
       color: #FBFBFB;
       text-shadow: 0 2px 1px #000;
     }
     a {
       color: #BBB;
       text-decoration: none;
+    }
+    a:hover {
+        color: #CCC;
     }
     .section {
       margin-top: 50vh;
@@ -45,7 +48,7 @@
   <div class="section">
     <p><span class="name">chadluo</span>. patterns and graphite.</p>
     <p>i at yuki.rocks ·
-      <a href="https://twitter.com/luoxr" target="_blank">twitter</a> ·
+      <a href="https://twitter.com/chadluo" target="_blank">twitter</a> ·
       <a href="https://github.com/chadluo">github</a></p>
   </div>
   <address>&#x2756;</address>
