--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div class="section">
-    <p><span class="name">chadluo</span>. patterns and graphite.</p>
+    <p><span class="name">chadluo (yukirock)</span>. patterns and graphite.</p>
     <p>i at yuki.rocks ·
       <a href="https://twitter.com/chadluo" target="_blank">twitter</a> ·
       <a href="https://github.com/chadluo">github</a></p>
