--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <p><span class="name">chadluo (yukirock)</span>. patterns and graphite.</p>
     <p>i at yuki.rocks ·
       <a href="https://twitter.com/chadluo" target="_blank">twitter</a> ·
-      <a href="https://github.com/chadluo">github</a></p>
+      <a href="https://github.com/chadluo">github</a> ·
+      <a href="https://instagram.com/chadluo/">instagram</a></p>
   </div>
   <address>&#x2756;</address>
 </body>
