--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p>
       <a href="https://github.com/chadluo">github</a> · <a href="https://gist.github.com/chadluo">gist</a> |
       <a href="https://instagram.com/chadluo/">instagram</a> |
-      <a href="https://twitter.com/chadluo" target="_blank">twitter</a></p>
+      <a href="https://twitter.com/_yukirock" target="_blank">twitter</a></p>
     <p>i at yuki.rocks</p>
   </div>
   <address>&#x2756;</address>
