--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
   <div class="section">
     <p><span class="name">chadluo (yukirock)</span>. patterns and graphite.</p>
     <p>
-      <a href="https://github.com/chadluo">github</a> · <a href="https://gist.github.com/chadluo">gist</a> |
-      <a href="https://instagram.com/chadluo/">instagram</a> |
-      <a href="https://twitter.com/_yukirock" target="_blank">twitter</a></p>
+      <a href="https://github.com/chadluo">github</a> (<a href="https://gist.github.com/chadluo">gist</a>) |
+      <a href="https://instagram.com/chadluo/">instagram</a></p>
     <p>i at yuki.rocks</p>
   </div>
   <address>&#x2756;</address>
