have no idea build failure

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <section>
     <p><b>chad luo (yukirock)</b>. composition and panorama.<br>
-    <a href="https://github.com/chadluo">github</a> &middot; <a href="https://gist.github.com/chadluo">gist</a> | <a href="https://instagram.com/chadluo/">instagram</a> | <a href="https://www.behance.net/yukirock">behance</a> | <a href="https://twitter.com/_yukirock">twitter</a><br>
+    <a href="https://github.com/chadluo">github</a> &middot; <a href="https://gist.github.com/chadluo">gist</a> | <a href="https://instagram.com/chadluo">instagram</a> | <a href="https://www.behance.net/yukirock">behance</a> | <a href="https://twitter.com/_yukirock">twitter</a><br>
     i <i>at</i> yuki.rocks
   </section>
   <footer>&#x2756;</footer>
