add resume info

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     text-decoration: none;
   }
   a:hover { color: #f5e56b; }
+  .hid, .hid:hover {
+    color: white;
+    cursor: default;
+  }
   section, footer {
     position: absolute;
     left: 0;
@@ -52,7 +56,7 @@
 </head>
 <body>
   <section>
-    <b>chad luo (yukirock)</b>. patterns and panorama.<br>i <i>at</i> yuki.rocks
+      <b><a class="hid" href="/chad.md">chad</a> luo (yukirock)</b>. patterns and panorama.<br>i <i>at</i> yuki.rocks
     <hr>
     <a href="/glyphdiff">glyphdiff</a>
   </section>
