--- a/index.html
+++ b/index.html
@@ -4,52 +4,33 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="canonical" href="https://yuki.rocks">
   <title>chad luo</title>
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Mate:400,400italic|Mate+SC">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Mate:400,400italic|Mate+SC">
   <style>
-    ::-moz-selection {
-      color: #f8b500;
-    }
-
-    ::selection {
-      color: #f8b500;
-    }
-
     body {
-      margin: 0;
       background-color: #191919;
-      font-size: 100%;
       font-family: "Mate", serif;
       color: white;
       text-shadow: 0 .08em .08em black, 0 .16em .16em black;
     }
 
-    a,
-    a:hover {
+    a {
+      color: white;
+      text-decoration: none;
       transition: .15s;
     }
 
-    a {
-      color: #f8b500;
-      text-decoration: none;
-    }
-
     a:hover {
-      color: #f5e56b;
-    }
-
-    section,
-    footer {
-      position: absolute;
-      left: 0;
-      right: 0;
-      text-align: center;
+      color: #f8b500;
+      transition: .15s;
     }
 
     section {
+      position: relative;
       top: 50vh;
-      line-height: 1.35;
+      text-align: center;
+      transform: translateY(-50%);
     }
 
     b {
@@ -62,34 +43,21 @@
       margin-right: 0.07em;
     }
 
-    hr {
-      border: none;
-      margin: 0;
-      height: 1.35em;
-    }
-
-    .fa {
-      padding: .8em;
-    }
-
-    footer {
-      bottom: 7vh;
+    ins {
+      text-decoration: none;
+      margin: 0 .4em;
     }
   </style>
 </head>
 
 <body>
   <section>
-    <b>chad luo (yukirock)</b>. patterns and panorama.
-    <br>i <i>at</i> yuki.rocks
-    <hr>
-    <a href="/glyphdiff">glyphdiff</a>
+    <b>chad luo</b>
+    <ins>&middot;</ins> <a class="link" title="github/chadluo" href="//github.com/chadluo"><b>github</b></a>
+    <ins>&middot;</ins> <a class="link" title="behance/yukirock" href="//www.behance.net/yukirock"><b>behance</b></a>
+    <ins>&middot;</ins> <a class="link" title="instagram/chadluo" href="//instagram.com/chadluo"><b>instagram</b></a>
+    <ins>&middot;</ins> i <i>at</i> yuki.rocks
   </section>
-  <footer>
-    <a class="link" title="github/chadluo" href="https://github.com/chadluo"><i class="fa fa-github fa-fw"></i></a>
-    <a class="link" title="behance/yukirock" href="https://www.behance.net/yukirock"><i class="fa fa-behance fa-fw"></i></a>
-    <a class="link" title="instagram/chadluo" href="https://instagram.com/chadluo"><i class="fa fa-instagram fa-fw"></i></a>
-  </footer>
   <script>
     (function(i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
