add medium; shorten names

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     body {
       background-color: #191919;
       font-family: "Mate", serif;
+      font-size: 18px;
       color: white;
       text-shadow: 0 .08em .08em black, 0 .16em .16em black;
     }
@@ -39,12 +40,9 @@
       font-weight: 400;
     }
 
-    i {
-      margin-right: 0.07em;
-    }
-
     ins {
       text-decoration: none;
+      color: #999;
       margin: 0 .4em;
     }
   </style>
@@ -53,10 +51,11 @@
 <body>
   <section>
     <b>chad luo</b>
-    <ins>&middot;</ins> <a class="link" title="github/chadluo" href="//github.com/chadluo"><b>github</b></a>
-    <ins>&middot;</ins> <a class="link" title="behance/yukirock" href="//www.behance.net/yukirock"><b>behance</b></a>
-    <ins>&middot;</ins> <a class="link" title="instagram/chadluo" href="//instagram.com/chadluo"><b>instagram</b></a>
-    <ins>&middot;</ins> i <i>at</i> yuki.rocks
+    <ins>&middot;</ins> <a class="link" title="medium" href="//m.yuki.rocks"><b>mdm</b></a>
+    <ins>&middot;</ins> <a class="link" title="github/chadluo" href="//github.com/chadluo"><b>gthb</b></a>
+    <ins>&middot;</ins> <a class="link" title="behance/yukirock" href="//www.behance.net/yukirock"><b>bhnc</b></a>
+    <ins>&middot;</ins> <a class="link" title="instagram/chadluo" href="//instagram.com/chadluo"><b>nstgrm</b></a>
+    <ins>&middot;</ins> i <i>at</i>
   </section>
   <script>
     (function(i, s, o, g, r, a, m) {
