--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width">
   <link rel="canonical" href="https://yuki.rocks">
   <title>chad luo</title>
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Mate:400,400italic|Mate+SC">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Mate:400,400italic|Mate+SC&text=%2Fabcdghilmnorstu">
   <style>
     body {
       background-color: #191919;
       font-family: "Mate", serif;
-      font-size: 18px;
+      font-size: 20px;
       color: white;
       text-shadow: 0 .08em .08em black, 0 .16em .16em black;
     }
@@ -36,14 +36,19 @@
 
     b {
       font-family: "Mate SC", serif;
-      letter-spacing: 0.05em;
+      letter-spacing: .06em;
       font-weight: 400;
+      kerning-pairs: lu 0.04em, md .03em, gt .07em, hb .03em, bh .05em, hn .04em, ns .04em, tg .09em;
     }
 
     ins {
       text-decoration: none;
+      margin: 0 3vw;
+    }
+
+    ins::before {
+      content: '·';
       color: #999;
-      margin: 0 .4em;
     }
   </style>
 </head>
@@ -51,12 +56,13 @@
 <body>
   <section>
     <b>chad luo</b>
-    <ins>&middot;</ins> <a class="link" title="medium" href="//m.yuki.rocks"><b>mdm</b></a>
-    <ins>&middot;</ins> <a class="link" title="github/chadluo" href="//github.com/chadluo"><b>gthb</b></a>
-    <ins>&middot;</ins> <a class="link" title="behance/yukirock" href="//www.behance.net/yukirock"><b>bhnc</b></a>
-    <ins>&middot;</ins> <a class="link" title="instagram/chadluo" href="//instagram.com/chadluo"><b>nstgrm</b></a>
-    <ins>&middot;</ins> i <i>at</i>
+    <ins></ins> <a class="link" title="medium" href="//m.yuki.rocks"><b>mdm</b></a>
+    <ins></ins> <a class="link" title="github/chadluo" href="//github.com/chadluo"><b>gthb</b></a>
+    <ins></ins> <a class="link" title="behance/yukirock" href="//www.behance.net/yukirock"><b>bhnc</b></a>
+    <ins></ins> <a class="link" title="instagram/chadluo" href="//instagram.com/chadluo"><b>nstgrm</b></a>
+    <ins></ins> i <i>at</i>
   </section>
+  <script src="type.js" type="text/javascript"></script>
   <script>
     (function(i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
