--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       font-size: 20px;
       color: white;
       text-shadow: 0 .08em .08em black, 0 .16em .16em black;
+      font-kerning: normal;
+      font-feature-settings: "kern", "liga", "clig", "calt";
     }
 
     a {
@@ -38,17 +40,18 @@
       font-family: "Mate SC", serif;
       letter-spacing: .06em;
       font-weight: 400;
-      kerning-pairs: lu 0.04em, md .03em, gt .07em, hb .03em, bh .05em, hn .04em, ns .04em, tg .09em;
+      kerning-pairs: lu 0.04em, md .03em, gt .07em, hb .03em, bh .05em, hn .04em, ns .04em, tg .08em, gr 0.05em, rm 0.05em;
     }
 
     ins {
       text-decoration: none;
-      margin: 0 3vw;
+      margin: 0 2vw;
+      transform: translateY(1.5px);
     }
 
     ins::before {
-      content: '·';
-      color: #999;
+      content: '|';
+      color: #888;
     }
   </style>
 </head>
