--- a/index.html
+++ b/index.html
@@ -6,41 +6,38 @@
   <meta name="viewport" content="width=device-width">
   <link rel="canonical" href="https://yuki.rocks">
   <title>chad luo</title>
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Mate:400,400italic|Mate+SC&text=%2Fabcdghilmnorstu">
-  <style>
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Mate:400,400italic|Mate+SC">
+  <style media="screen">
     body {
-      background-color: #191919;
       font-family: "Mate", serif;
       font-size: 20px;
-      color: white;
-      text-shadow: 0 .08em .08em black, 0 .16em .16em black;
       font-kerning: normal;
-      font-feature-settings: "kern", "liga", "clig", "calt";
+      font-feature-settings: "kern";
     }
 
     a {
-      color: white;
+      color: black;
       text-decoration: none;
       transition: .15s;
     }
 
     a:hover {
-      color: #f8b500;
+      color: #6E629C;
       transition: .15s;
     }
 
     section {
+      text-align: center;
       position: relative;
       top: 50vh;
-      text-align: center;
-      transform: translateY(-50%);
+      transform: translateY(-100%);
     }
 
     b {
       font-family: "Mate SC", serif;
       letter-spacing: .06em;
       font-weight: 400;
-      kerning-pairs: lu 0.04em, md .03em, gt .07em, hb .03em, bh .05em, hn .04em, ns .04em, tg .08em, gr 0.05em, rm 0.05em;
+      kerning-pairs: uo 0.07em, md .03em, gt .07em, hb .03em, bh .05em, hn .04em, nc 0.05em, ns .04em, tg .08em, gr 0.05em, rm 0.05em;
     }
 
     ins {
@@ -51,7 +48,7 @@
 
     ins::before {
       content: '|';
-      color: #888;
+      color: #CCC;
     }
   </style>
 </head>
@@ -72,8 +69,7 @@
       i[r] = i[r] || function() {
         (i[r].q = i[r].q || []).push(arguments)
       }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
+      a = s.createElement(o), m = s.getElementsByTagName(o)[0];
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
