Switch to Cormorant

--- a/index.html
+++ b/index.html
@@ -6,61 +6,17 @@
   <meta name="viewport" content="width=device-width">
   <link rel="canonical" href="https://yuki.rocks">
   <title>chad luo</title>
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Mate:400,400italic|Mate+SC">
-  <style media="screen">
-    body {
-      font-family: "Mate", serif;
-      font-size: 20px;
-      font-kerning: normal;
-      font-feature-settings: "kern";
-    }
-
-    a {
-      color: black;
-      text-decoration: none;
-      transition: .15s;
-    }
-
-    a:hover {
-      color: #6E629C;
-      transition: .15s;
-    }
-
-    section {
-      text-align: center;
-      position: relative;
-      top: 50vh;
-      transform: translateY(-100%);
-    }
-
-    b {
-      font-family: "Mate SC", serif;
-      letter-spacing: .06em;
-      font-weight: 400;
-      kerning-pairs: uo 0.07em, md .03em, gt .07em, hb .03em, bh .05em, hn .04em, nc 0.05em, ns .04em, tg .08em, gr 0.05em, rm 0.05em;
-    }
-
-    ins {
-      text-decoration: none;
-      margin: 0 2vw;
-      transform: translateY(1.5px);
-    }
-
-    ins::before {
-      content: '|';
-      color: #CCC;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Cormorant:400,400i|Cormorant+SC&text=/abcdghilmnorstu" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
 
 <body>
   <section>
     <b>chad luo</b>
-    <ins></ins> <a class="link" title="medium" href="//m.yuki.rocks"><b>mdm</b></a>
-    <ins></ins> <a class="link" title="github/chadluo" href="//github.com/chadluo"><b>gthb</b></a>
-    <ins></ins> <a class="link" title="behance/yukirock" href="//www.behance.net/yukirock"><b>bhnc</b></a>
-    <ins></ins> <a class="link" title="instagram/chadluo" href="//instagram.com/chadluo"><b>nstgrm</b></a>
-    <ins></ins> i <i>at</i>
+    <br>
+    <a class="link" title="medium" href="//m.yuki.rocks"><b>mdm</b></a><a class="link" title="github/chadluo" href="//github.com/chadluo"><b>gthb</b></a><a class="link" title="behance/yukirock" href="//www.behance.net/yukirock"><b>bhnc</b></a><a class="link"
+        title="instagram/chadluo" href="//instagram.com/chadluo"><b>nstgrm</b></a>
+    <br> i <i>at</i>
   </section>
   <script src="type.js" type="text/javascript"></script>
   <script>
