--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="canonical" href="https://yuki.rocks">
   <title>chad luo</title>
-  <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300"rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
 </head>
 
@@ -29,9 +29,9 @@
       bounceY: false,
       parallax: .5,
       pivot: 0,
-      density: 7000, // px^2 per node
-      dotRadius: [1, 2], // px value or [minR,maxR]
-      backgroundColor: 'white', // default transparent; use alpha value for motion blur and ghosting
+      density: 7000,
+      dotRadius: [1, 2],
+      backgroundColor: 'white',
       dotColor: 'lightgrey',
       linkColor: 'lightgrey',
       linkDistance: 100,
