--- a/index.html
+++ b/index.html
@@ -1,57 +1,34 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link rel="canonical" href="https://yuki.rocks">
-  <title>chad luo</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300"rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="//use.typekit.net/vau8eda.css">
   <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+  <title>yukirock</title>
 </head>
 
-<body>
-  <canvas id="zodiac"></canvas>
-  <section>
-    <a class="medium vert link" title="medium" href="//m.yuki.rocks">medium</a>
-    <a class="github vert link" title="github/chadluo" href="//github.com/chadluo">github</a>
-    <a class="behance hori link" title="behance/yukirock" href="//www.behance.net/yukirock">behance</a>
-    <a class="instagram hori link" title="instagram/chadluo" href="//instagram.com/chadluo">instagram</a>
-  </section>
-  <script type="text/javascript" src="zodiac.min.js"></script>
-  <script type="text/javascript">
-    new Zodiac('zodiac', {
-      directionX: 0,
-      directionY: 0,
-      velocityX: [.1, .15],
-      velocityY: [.1, .15],
-      bounceX: false,
-      bounceY: false,
-      parallax: .5,
-      pivot: 0,
-      density: 7000,
-      dotRadius: [1, 2],
-      backgroundColor: 'white',
-      dotColor: 'lightgrey',
-      linkColor: 'lightgrey',
-      linkDistance: 100,
-      linkWidth: .5
-    });
-  </script>
-  <script>
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-76808046-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+<body class="tk-calluna-sans">
+
+  <h1>17/16</h1>
+  <div class="fleuron">&#10087;</div>
+  <div class="author">yukirock</div>
+  <div class="credits">
+    <ul>
+      <li>
+        <a href="//tonejs.github.io/">Tone.js</a>
+      </li>
+      <li>
+        <a href="//typekit.com/fonts/calluna-sans">Calluna Sans</a>
+      </li>
+    </ul>
+  </div>
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/tone/13.1.24/Tone.min.js" integrity="sha256-AA8/CXSZBpRhyzRzew3hPzDGk8pWJje5jloJb4Du7gQ="
+    crossorigin="anonymous"></script>
+  <script src="stepSeq.js"></script>
 </body>
 
 </html>
