--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <div class="credits">
     <ul>
       <li>
-        <a href="//tonejs.github.io/">Tone.js</a>
+        <a target="_blank" href="//tonejs.github.io/">Tone.js</a>
       </li>
       <li>
-        <a href="//typekit.com/fonts/calluna-sans">Calluna Sans</a>
+        <a target="_blank" href="//typekit.com/fonts/calluna-sans">Calluna Sans</a>
       </li>
     </ul>
   </div>
