ui, volume, update interval

--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 <body class="tk-calluna-sans">
 
   <h1>17/16</h1>
-  <div class="fleuron">&#10087;</div>
-  <div class="author">yukirock</div>
-  <div class="credits">
+
+  <div id="fleuron">&#10087;</div>
+  <div id="author-1">yuki-</div>
+  <div id="author-2">rock</div>
+  <div id="credits">
     <ul>
-      <li>
-        <a target="_blank" href="//tonejs.github.io/">Tone.js</a>
-      </li>
-      <li>
-        <a target="_blank" href="//typekit.com/fonts/calluna-sans">Calluna Sans</a>
-      </li>
+      <li><a target="_blank" href="//tonejs.github.io/">Tone.js</a></li>
+      <li><a target="_blank" href="//typekit.com/fonts/calluna-sans">Calluna Sans</a></li>
     </ul>
   </div>
 
