--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://use.typekit.net/vau8eda.css" />
+    <style>
+      body {
+        margin: 0;
+      }
+      .content {
+        color: #555;
+        font: italic 200 10vmax/0.95 source-serif-4-display, serif;
+        margin: 20vh 0;
+        text-align: center;
+      }
+      a {
+        text-decoration: none;
+        z-index: 1;
+        color: orangered;
+      }
+      a:hover {
+        color: orange;
+      }
+    </style>
+    <title>Chad Luo</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="//use.typekit.net/vau8eda.css">
-  <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-  <title>yukirock</title>
-</head>
-
-<body class="tk-calluna-sans">
-
-  <h1>17/16</h1>
-
-  <div id="fleuron">&#10087;</div>
-  <div id="author-1">yuki-</div>
-  <div id="author-2">rock</div>
-  <div id="credits">
-    <ul>
-      <li><a target="_blank" href="//tonejs.github.io/">Tone.js</a></li>
-      <li><a target="_blank" href="//typekit.com/fonts/calluna-sans">Calluna Sans</a></li>
-    </ul>
-  </div>
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/tone/13.1.24/Tone.min.js" integrity="sha256-AA8/CXSZBpRhyzRzew3hPzDGk8pWJje5jloJb4Du7gQ="
-    crossorigin="anonymous"></script>
-  <script src="stepSeq.js"></script>
-</body>
-
+  <body>
+    <div class="content">
+      Chad Luo, pretending to know things
+      <a href="https://glyphdiff.yuki.rocks/">glyphdiff</a> Font comparison
+      <a href="https://scales.adluo.ch/">scales</a> Equivalent screen resolution
+      <a href="https://wcc.adluo.ch/">wcc</a> Web components cheatsheet
+      <a href="https://yuanliao.adluo.ch/">yuanliao</a> Genshin Impact build material lookup
+      <a href="https://github.com/chadluo">GitHub</a>
+      <a href="https://www.behance.net/chadluo">Behance</a>
+    </div>
+  </body>
 </html>
