--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <body>
     <div class="content">
       Chad Luo, pretending to know things
-      <a href="https://glyphdiff.yuki.rocks/">glyphdiff</a> Font comparison
+      <a href="https://glyphdiff.adluo.ch/">glyphdiff</a> Font comparison
+      <!-- prettier-ignore -->
+      <a href="https://hnr.adluo.ch">HNR</a> Hacker News Reader with LLM summaries
       <a href="https://scales.adluo.ch/">scales</a> Equivalent screen resolution
       <a href="https://wcc.adluo.ch/">wcc</a> Web components cheatsheet
       <a href="https://yuanliao.adluo.ch/">yuanliao</a> Genshin Impact build material lookup
